# server/api/agent/agent.controller.js
@@ -4,8 +4,8 @@ var Agent = require('./agent.model');//
 var passport = require('passport');
 var config = require('../../config/environment');
 var jwt = require('jsonwebtoken');
-
-var validationError = function(res, err) {
+var Client = require('../client/client.model')
+var validationError = function (res, err) {
   return res.status(422).json(err);
 };
 
@@ -13,9 +13,9 @@ var validationError = function(res, err) {
  * Get list of Agents
  * restriction: 'admin'
  */
-exports.index = function(req, res) {
+exports.index = function (req, res) {
   Agent.find({}, '-salt -hashedPassword', function (err, Agents) {
-    if(err) return res.status(500).send(err);
+    if (err) return res.status(500).send(err);
     res.status(200).json(Agents);
   });
 };
@@ -23,15 +23,45 @@ exports.index = function(req, res) {
 /**
  * Creates a new Agent
  */
-exports.create = function (req, res, next) {
-  var newAgent = new Agent(req.body);
-  newAgent.provider = 'local';
-  newAgent.role = 'Agent';
-  newAgent.save(function(err, Agent) {
-    if (err) return validationError(res, err);
-    var token = jwt.sign({_id: Agent._id }, config.secrets.session, { expiresInMinutes: 60*5 });
-    res.json({ token: token });
-  });
+exports.create = async function (req, res, next) {
+  console.log(req.body);
+  var user = req.body.agencyDetails;
+  var client = req.body.clientDetails;
+  const agent = await Agent.findOne({ name: user.name }).exec();
+  if (agent) {
+    client['agencyId'] = agent._id
+    Client.create(client, function (err, newclient) {
+      if (newclient) {
+        res.status(200).json({ message: "success" ,agent:agent,client:newclient});
+      } else if (err) {
+        res.status(500).json({ message: "failed", reason: "required Data Missing" });
+      }
+    })
+  } else if (!agent) {
+    Agent.create(user, function (err, agnt) {
+      if (agnt) {
+        client['agencyId'] = agnt._id
+        Client.create(client, function (err, newclient) {
+          if (newclient) {
+            res.status(200).json({ message: "success" ,agent:agnt,client:newclient});
+          } else if (err) {
+            res.status(500).json({ message: "failed", reason: "required Data Missing" });
+          }
+        })
+      } else if (err) {
+        res.status(500).json({ message: "failed", reason: "invalid Data" });
+      }
+    })
+  }
+
+  /* newAgent.save(function(err, Agent) {
+     console.log(Agent);
+     
+     if (err) return validationError(res, err);
+     var token = jwt.sign({_id: Agent._id }, config.secrets.session, { expiresIn: 360*5 });
+     res.json({ token: token });
+   });
+   */
 };
 
 /**
@@ -51,9 +81,9 @@ exports.show = function (req, res, next) {
  * Deletes a Agent
  * restriction: 'admin'
  */
-exports.destroy = function(req, res) {
-  Agent.findByIdAndRemove(req.params.id, function(err, Agent) {
-    if(err) return res.status(500).send(err);
+exports.destroy = function (req, res) {
+  Agent.findByIdAndRemove(req.params.id, function (err, Agent) {
+    if (err) return res.status(500).send(err);
     return res.status(204).send('No Content');
   });
 };
@@ -61,15 +91,15 @@ exports.destroy = function(req, res) {
 /**
  * Change a Agents password
  */
-exports.changePassword = function(req, res, next) {
+exports.changePassword = function (req, res, next) {
   var AgentId = req.Agent._id;
   var oldPass = String(req.body.oldPassword);
   var newPass = String(req.body.newPassword);
 
   Agent.findById(AgentId, function (err, Agent) {
-    if(Agent.authenticate(oldPass)) {
+    if (Agent.authenticate(oldPass)) {
       Agent.password = newPass;
-      Agent.save(function(err) {
+      Agent.save(function (err) {
         if (err) return validationError(res, err);
         res.status(200).send('OK');
       });
@@ -82,11 +112,11 @@ exports.changePassword = function(req, res, next) {
 /**
  * Get my info
  */
-exports.me = function(req, res, next) {
+exports.me = function (req, res, next) {
   var AgentId = req.Agent._id;
   Agent.findOne({
     _id: AgentId
-  }, '-salt -hashedPassword', function(err, Agent) { // don't ever give out the password or salt
+  }, '-salt -hashedPassword', function (err, Agent) { // don't ever give out the password or salt
     if (err) return next(err);
     if (!Agent) return res.status(401).send('Unauthorized');
     res.json(Agent);
@@ -96,6 +126,6 @@ exports.me = function(req, res, next) {
 /**
  * Authentication callback
  */
-exports.authCallback = function(req, res, next) {
+exports.authCallback = function (req, res, next) {
   res.redirect('/');
 };
